--- a/app/views/fb_adresas/show.html.erb
+++ b/app/views/fb_adresas/show.html.erb
@@ -31,4 +31,13 @@ URL ve Flexibee stranky s fakturami tohoto subjektu:
 
 <br />
 
+Faktury:
+
+<% @fb_invoices.faktura_vydana.each do |invoice| %>
+   <%= link_to "#{invoice.kod}", :id=>invoice.id, :controller=>'fb_invoices', :action=>'show'%>
+
+<% end %>
+
+<br />
+
 <%= link_to 'Back', fb_adresas_path %>
